--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Swarm fight game",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --minified --plugins @babel/plugin-transform-arrow-functions -s true -d lib",
+    "build": "gulp build",
+    "watch": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "msakuta",
