--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,9 @@ jobs:
       - checkout
 
       - run:
+        name: npm install
+        command: npm i
+
+      - run:
           name: npm build
           command: npm run build
