--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,17 @@ jobs:
           name: npm build
           command: npm run build
 
-      - run: |
-          set -xu
-          mkdir -p /tmp/artifacts
-          cp index.html /tmp/artifacts/
-          cp -r build /tmp/artifacts/
+      - run:
+          name: Copy result files to temporary directory
+          command: |
+            set -xu
+            mkdir -p /tmp/artifacts
+            cp index.html /tmp/artifacts/
+            cp -r build /tmp/artifacts/
+
+      - run:
+          name: Install certificate for uploading artifacts to AWS S3
+          command: apk add ca-certificates
 
       # Save artifacts
       - store_artifacts:
