--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,21 @@ jobs:
           name: npm build
           command: npm run build
 
+  deploy:
+    docker:
+      - image: circleci/node
+
+    steps:
+      - checkout
+
+      - run:
+          name: npm install
+          command: npm i
+
+      - run:
+          name: npm build
+          command: npm run build
+
       - run:
           name: Copy result files to temporary directory
           command: |
@@ -35,3 +50,14 @@ jobs:
               ./deploy.sh
             fi
 
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+        requires:
+          - build
+        filters:
+          branches:
+            only: master
