--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "jquery": "^3.4.1",
-    "konva": "^4.0.0"
+    "konva": "^4.0.0",
+    "marchingsquares": "^1.3.3"
   }
 }
