--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/polyfill": "^7.4.4",
     "jquery": "^3.4.1",
     "konva": "^4.0.0",
-    "marchingsquares": "^1.3.3"
+    "marchingsquares": "^1.3.3",
+    "simplify-js": "^1.2.3"
   }
 }
