--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "delaunator": "^4.0.0",
+    "gulp-duration": "0.0.0",
     "jquery": "^3.5.0",
     "konva": "^4.0.0",
     "marchingsquares": "^1.3.3",
-    "simplify-js": "^1.2.3",
-    "minimist": ">=1.2.2"
+    "minimist": ">=1.2.2",
+    "simplify-js": "^1.2.3"
   }
 }
