--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           command: |
             set -xu
             mkdir -p /tmp/artifacts
-            cp -r build /tmp/artifacts/
+            cp -r build/* /tmp/artifacts/
 
       # Save artifacts
       - store_artifacts:
